# meclaw

./: .dockerignore  .env.example  .env.prod.example  .fallowrc.json  .gitignore  .lintstagedrc.json  .npmrc  .secretlintignore  .secretlintrc.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  biome.json  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reference.md  turbo.json  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
app/: layout.tsx  page.tsx
content/: README.md  personal.example.md  resume.md
data/: .gitkeep
drizzle/: 0000_previous_adam_warlock.sql  0001_remarkable_captain_cross.sql  0002_left_paibok.sql  0003_woozy_saracen.sql
infra/: .env.customer.example  .env.dokploy.example  .env.example  .env.prod.example  Caddyfile  Dockerfile.ops  backup-customers.sh  docker-compose.customer.yml  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.yml  provision-customer.sh  teardown-customer.sh  upgrade-customer.sh
lib/: content.test.ts  content.ts  (+5 more)
services/ai/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
services/ai/app/: answer_gap.py  answer_use.py  config.py  corpus.py  gap_match.py  gaps.py  history.py  lead.py  main.py  provider.py  retriever.py  runner.py  runtime_config.py  stream.py  streaming.py  tools.py
services/ai/app/eval/: __init__.py  collect.py  dataset.py  generate.py  metrics.py  report.py  run.py
services/ai/app/graph/: build.py  nodes.py  state.py
services/ai/app/research/: __init__.py  graph.py  mcp_client.py  persist.py  planner.py  researcher.py  run.py  schemas.py  stream_run.py  synthesize.py  tool_caller.py  validate.py  web_tools.py
services/ai/eval/: interview.yaml
services/ai/scripts/: spike_tool_calling.py
services/ai/tests/: test_agent_nodes.py  test_answer_gap.py  test_answer_use.py  test_build.py  test_chat_endpoint.py  test_config.py  test_corpus.py  test_corpus_status.py  test_eval_collect.py  test_eval_dataset.py  test_eval_generate.py  test_eval_metrics.py  test_eval_report.py  test_gap_match.py  test_gaps.py  test_history.py  test_lead.py  test_provider.py  test_research_endpoint.py  test_retriever.py  test_review.py  test_runner.py  test_runtime_config.py  test_stream.py  test_streaming.py  test_tools.py  test_triage.py
services/ai/tests/research/: test_graph.py  test_mcp_client.py  test_persist.py  test_planner.py  test_researcher.py  test_schemas.py  test_stream_run.py  test_synthesize.py  test_tool_caller.py  test_validate.py  test_web_tools.py
(+338 files in other folders)
