[project]
name = "meclaw-ai"
version = "0.1.0"
description = "meclaw Phase 3 — Python AI sidecar (FastAPI + LangGraph)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "langgraph>=0.2.50",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-qdrant>=0.2",
  "qdrant-client>=1.12",
  "langchain-ollama>=0.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
