[project]
name = "meclaw-ai"
version = "0.1.0"
description = "meclaw Phase 3 — Python AI sidecar (FastAPI + LangGraph)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "langgraph>=0.2.50",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-ollama>=0.2",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "ragas>=0.2,<0.3",
  "langchain-community>=0.1.0,<0.4",
  "pyyaml>=6.0",
  "tavily-python>=0.5,<1.0",
  "langchain-mcp-adapters>=0.1,<1.0",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
